<resources>
    <string name="app_name">Asesorias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_titlea">Alumnos</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_historial">Historial</string>
    <string name="menu_asesorias">Asesorias</string>
    <string name="menu_docentes">Docentes</string>
    <string name="menu_materias">Materias</string>
    <string name="menu_perfil">Perfil</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Docentes</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_historiald">Historial</string>
    <string name="menu_asesoriasd">Asesorias</string>
    <string name="menu_materiasd">Materias</string>
    <string name="menu_perfild">Perfil</string>
</resources>
