<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/papel"
            android:title="@string/menu_historial" />
        <item
            android:id="@+id/nav_asesorias"
            android:icon="@drawable/vision"
            android:title="@string/menu_asesorias" />
        <item
            android:id="@+id/nav_docentes"
            android:icon="@drawable/usuario"
            android:title="@string/menu_docentes" />
        <item
            android:id="@+id/nav_materias"
            android:icon="@drawable/libro"
            android:title="@string/menu_materias" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/mano"
            android:title="@string/menu_perfil" />
    </group>
</menu>
