<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_historiald"
            android:icon="@drawable/papel"
            android:title="@string/menu_historiald" />
        <item
            android:id="@+id/nav_asesoriasd"
            android:icon="@drawable/vision"
            android:title="@string/menu_asesoriasd" />
        <item
            android:id="@+id/nav_materiasd"
            android:icon="@drawable/libro"
            android:title="@string/menu_materiasd" />
        <item
            android:id="@+id/nav_perfild"
            android:icon="@drawable/mano"
            android:title="@string/menu_perfild" />
    </group>
</menu>
