<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_historial">

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.example.asesorias.ui.historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.asesorias.ui.historial.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_historial" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_asesorias"
        android:name="com.example.asesorias.ui.asesorias.AsesoriasFragment"
        android:label="@string/menu_asesorias"
        tools:layout="@layout/fragment_asesorias" />

    <fragment
        android:id="@+id/nav_docentes"
        android:name="com.example.asesorias.ui.docentes.DocentesFragment"
        android:label="@string/menu_docentes"
        tools:layout="@layout/fragment_docentes" />
    <fragment
        android:id="@+id/nav_materias"
        android:name="com.example.asesorias.ui.materias.MateriasFragment"
        android:label="@string/menu_materias"
        tools:layout="@layout/fragment_materias" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.asesorias.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil" />
</navigation>