<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_historiald">

    <fragment
        android:id="@+id/nav_historiald"
        android:name="com.example.asesorias.ui.historiald.HistorialdFragment"
        android:label="@string/menu_historiald"
        tools:layout="@layout/fragment_historiald">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.asesorias.ui.historiald.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_historiald" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_asesoriasd"
        android:name="com.example.asesorias.ui.asesoriasd.AsesoriasdFragment"
        android:label="@string/menu_asesoriasd"
        tools:layout="@layout/fragment_asesoriasd" />

    <fragment
        android:id="@+id/nav_materiasd"
        android:name="com.example.asesorias.ui.materiasd.MateriasdFragment"
        android:label="@string/menu_materiasd"
        tools:layout="@layout/fragment_materiasd" />
    <fragment
        android:id="@+id/nav_perfild"
        android:name="com.example.asesorias.ui.perfild.PerfildFragment"
        android:label="@string/menu_perfild" />
</navigation>